# swift

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
peregrine/: Cargo.toml
peregrine/src/: activity.rs  exec.rs  history.rs  lib.rs  operation.rs  reexports.rs  resource.rs  timeline.rs
peregrine/src/operation/: initial_conditions.rs  mod.rs  ungrounded.rs
peregrine/tests/: caching.rs  graph_structuring.rs  history.rs  util.rs
peregrine_macros/: Cargo.toml
peregrine_macros/src/: lib.rs
peregrine_macros/src/activity/: input.rs  mod.rs  operation.rs  output.rs
peregrine_macros/src/model/: input.rs  mod.rs  output.rs
peregrine_macros/src/operation/: input.rs  mod.rs  output.rs
perf/: Cargo.toml
perf/src/: main.rs
potato_sat/: Cargo.toml
potato_sat/src/: activities.rs  main.rs
potato_sat/src/activities/: recharge_potato.rs
src/: duration.rs  example.rs  history.rs  lib.rs  macros.rs  operation.rs  reexports.rs  resource.rs
swift/: Cargo.toml
swift/src/: alloc.rs  duration.rs  exec.rs  history.rs  lib.rs  macros.rs  operation.rs  reexports.rs  resource.rs  time.rs  timeline.rs
swift_macros/: Cargo.toml
swift_macros/src/: duration.rs  lib.rs  operation.rs
swift_macros/src/activity/: input.rs  operation.rs  output.rs
swift_macros/src/model/: input.rs  mod.rs  output.rs
