[package]
name = "peregrine"
version = "0.1.0"
edition = "2021"

authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "A discrete event simulation engine similar to NASA-AMMOS's Aerie-Merlin."
readme = "README.md"
repository = "https://github.com/JoelCourtney/peregrine"
license = "MIT OR Apache-2.0"
keywords = ["simulation"]
categories = ["aerospace::simulation", "simulation"]

[features]
nightly = []
default = []

[dependencies]

## INTERNAL
peregrine_macros = { path = "../peregrine_macros" }

## SERIALIZATION
# For serializing/deserializing plans, sim history, etc.
# Also used to hash initial condition nodes.
serde = { version = "1.0.210", features = ["derive"] }
# A non-self-describing efficient serde backend.
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

## HISTORY
# A fast stable hashing algorithm, used for history caching.
foldhash = "0.1.4"
# A concurrent hashmap for storing history. Used for copiable resources.
dashmap = { version = "6.1.0", features = ["serde"] }
# The central trait that `elsa` depends on.
stable_deref_trait = "1.2.0"
type-map = "0.5.0"
type_reg = { version = "0.8.0", features = ["untagged"] }
inventory = "0.3.19"

## MEMORY
# An arena allocator used for Futures during simulation, and operations trait objects.
bumpalo = { version = "3.17.0", features = ["boxed"] }

## ASYNC
# A simple async executor, chosen because it is the only one that supports scoped spawns
# where neither the future or its output live for 'static.
async-executor = { version = "1.13.1", features = ["static"] }
# Used for the thread shutdown signal.
async-channel = "2.3.1"
# Used to block on and join futures in a sync context.
futures = "0.3.31"
# Used only for its async semaphore-based objects like RW locks.
tokio = { version = "1.43.0", default-features = false, features = ["sync"] }

## TIME
# A timekeeping library made for space missions, that follows the same standards as SPICE.
hifitime = "4.0.2"

## MISC
# Used for convience, not having to manually implement simple traits.
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "error"] }

## ERROR HANDLING
# Used to allow modellers to return errors from activities and operations
anyhow = "1.0.96"
