[package]
name = "peregrine"
version = "0.1.0"
edition = "2024"

authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "A discrete event simulation engine similar to NASA-AMMOS's Aerie-Merlin."
readme = "README.md"
repository = "https://github.com/JoelCourtney/peregrine"
license = "MIT OR Apache-2.0"
keywords = ["simulation"]
categories = ["aerospace::simulation", "simulation"]

[features]
nightly = ["parking_lot/nightly"]
default = []

[dependencies]

## INTERNAL
peregrine_macros = { path = "../peregrine_macros" }

## SERIALIZATION
# For serializing/deserializing plans, sim history, etc.
# Also used to hash initial condition nodes.
serde = { version = "1.0.210", features = ["derive"] }
# A non-self-describing efficient serde backend.
bincode = { version = "2.0.0-rc.3", features = ["serde"] }

## HISTORY
# A fast stable hashing algorithm, used for history caching.
foldhash = "0.1.4"
# A concurrent hashmap for storing history. Used for copiable resources.
dashmap = { version = "6.1.0", features = ["serde"] }
stable_deref_trait = "1.2.0"
type-map = "0.5.0"
type_reg = { version = "0.8.0", features = ["untagged"] }
inventory = "0.3.19"

## MEMORY
# An arena allocator used for Futures during simulation, and operations trait objects.
bumpalo-herd = "0.1.2"

## ASYNC
# Used to block on and join futures in a sync context.
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
oneshot = "0.1.11"

## PARALLELISM
rayon = "1.10.0"
crossbeam = "0.8.4"

## TIME
# A timekeeping library made for space missions, that follows the same standards as SPICE.
hifitime = "4.0.2"

## MISC
# Used for convience, not having to manually implement simple traits.
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "error"] }
smallvec = "2.0.0-alpha.10"

## ERROR HANDLING
# Used to allow modellers to return errors from activities and operations
anyhow = "1.0.96"

[dev-dependencies]
rand = "0.9.0"
