[package]
name = "swift"
version = "0.1.0"
edition = "2021"

authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "A discrete event simulation engine similar to NASA-AMMOS's Aerie."
readme = "README.md"
repository = "https://github.com/JoelCourtney/swift"
license = "MIT OR Apache-2.0"
keywords = ["simulation"]
categories = ["aerospace::simulation", "simulation"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
async-trait = "0.1.86"
tokio = { version = "1.43.0", features = ["full"] }
tokio-macros = { version = "2.5.0" }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
swift_macros = { path = "../swift_macros" }
dashmap = { version = "6.1.0", features = ["serde"] }
foldhash = "0.1.4"
bumpalo = { version = "3.17.0", features = ["boxed"] }
