[package]
name = "swift"
version = "0.1.0"
edition = "2021"

authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "A discrete event simulation engine similar to NASA-AMMOS's Aerie."
readme = "README.md"
repository = "https://github.com/JoelCourtney/swift"
license = "MIT OR Apache-2.0"
keywords = ["simulation"]
categories = ["aerospace::simulation", "simulation"]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
tokio = { version = "1.43.0", features = ["sync"] }
async-trait = "0.1.86"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
swift_macros = { path = "../swift_macros" }
dashmap = { version = "6.1.0", features = ["serde"] }
foldhash = "0.1.4"
bumpalo = { version = "3.17.0", features = ["boxed"] }
elsa = "1.11.0"
stable_deref_trait = "1.2.0"
async-executor = { version = "1.13.1", features = ["static"] }
